# brute-force-parse

./: CMakeLists.txt  Gramatica.txt  README.md
src/: grammar.lex  main.c
